Fixes bad dark mode

--- a/Japanese 1k WCC Esp/Styling.css
+++ b/Japanese 1k WCC Esp/Styling.css
@@ -127,8 +127,8 @@ footer {
 }
 
 .nightMode.card {
-    color: #eee;
-    background-color: #2e2e30;
+    color: #ffffff;
+    background-color: #000000;
 }
 
 @media screen and (min-width: 820px) {
@@ -325,7 +325,7 @@ header>div:not(:last-child) {
 
 .jpword.wcc {
     /* background: #ebe6dd; */
-    background-color: #f8f8f8;
+    background-color: hsl(0deg 80% 50% / 5%);
     border-radius: 10px;
     padding: 5px 25px;
 }
@@ -1033,12 +1033,12 @@ div[contenteditable="true"] {
 
 details,
 .headword_section {
-    background-color: #f9f9f9;
+    background-color: hsl(0deg 80% 50% / 3%);
     border-radius: 4px;
     padding: 3px;
     margin: 3px 0;
 /* margin-block-end: 0.4rem; */
-    border: 1px solid #e0e0e0;
+    border: 1px solid hsl(0deg 80% 50% / 15%);
 }
 
 summary {
@@ -1065,7 +1065,7 @@ summary {
     bottom: 5px;
     right: 0;
     left: 0;
-    border-bottom: 2px dotted #cccccc;
+    border-bottom: 2px dotted hsl(0 80% 40% / 20%);
 }
 
 .tooltip>.tooltip-text {
